--- a/.github/workflows/python_build_frameworks.yml
+++ b/.github/workflows/python_build_frameworks.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   Generate-frameworks-releases:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
